# BoxDoc

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  Trunk.toml  ai-schnittstelle.txt  index.html
src/: app.rs  canvas.rs  file_watch.rs  fonts.rs  geometry.rs  history.rs  io.rs  main.rs  model.rs  odt.rs  printing.rs  settings_io.rs  store.rs  themes.rs
